sandbox/output
HikerTest.java:8: error: cannot find symbol
        assertEquals(0, StringCalculator.add(""));
                        ^
  symbol:   variable StringCalculator
  location: class HikerTest
1 error
